@@ -1,5 +1,5 @@
 
-	SubC Compiler, Version 2014-03-20
+	SubC Compiler, Version 2014-03-21
 	By Nils M Holm, 2011--2014
 	Placed in the public domain
 
@@ -7,8 +7,8 @@
 	SUMMARY
 
 	SubC is a compiler for a (mostly) strict and sane subset of
-	C as described in "The C Programming Language", 2nd Ed.
-	The language is also known informally as "ANSI C" or "C89".
+	C as described in "The C Programming Language", 2nd Ed (also
+	known informally as "ANSI C" or "C89").
 
 	A previous version of the compiler is described in great detail
 	in the book "Practical Compiler Construction", which can be
