@@ -10,7 +10,7 @@
 #include "cg.h"
 #include "sys.h"
 
-#define VERSION		"2014-03-20"
+#define VERSION		"2014-03-21"
 
 #ifndef SCCDIR
  #define SCCDIR		"."
@@ -147,7 +147,7 @@ enum {
 	GREATER, GTEQ, LESS, LTEQ, EQUAL, NOTEQ, AMPER,
 	CARET, PIPE, LOGAND, LOGOR,
 
-	__ARGC, ARROW, ASAND, ASXOR, ASLSHIFT, ASMINUS, ASMOD, ASOR,
+	ARGC, ARROW, ASAND, ASXOR, ASLSHIFT, ASMINUS, ASMOD, ASOR,
 	ASPLUS, ASRSHIFT, ASDIV, ASMUL, ASSIGN, AUTO, BREAK, CASE,
 	CHAR, COLON, COMMA, CONTINUE, DECR, DEFAULT, DO, DOT,
 	ELLIPSIS, ELSE, ENUM, EXTERN, FOR, IDENT, IF, INCR, INT,
