@@ -1,3 +1,6 @@
+2014-03-21 Fix: sizeof(void) was not an error.
+2014-03-21 Made scc keep non-temporary object files.
+2014-03-21 Added ufseek() (unsigned fseek) function to S86.
 2014-03-20 Updated documentation.
 2014-03-19 Both S86 and SLD run on 16-bit systems now.
 2014-03-19 Made SLD store its relocation buffer on disk.
